[project]
name = "pixelart"
version = "0.1.0"
description = "pixelart converter"
authors = [
    { name = "akazdayo", email = "82073147+akazdayo@users.noreply.github.com" },
]
dependencies = [
    "streamlit>=1.41.1",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=2.1.1",
    "pillow>=10.4.0",
    "scikit-learn>=1.5.1",
    "watchdog>=4.0.2",
    "colorama>=0.4.6",
    "pixelart-modules>=0.1.0",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.5.1", "opencv-python>=4.10.0.84"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pixelart"]

[tool.pyright]
venvPath = "."
venv = ".venv"
