[project]
name = "pixelart"
version = "0.1.0"
description = "pixelart converter"
authors = [
    { name = "akazdayo", email = "82073147+akazdayo@users.noreply.github.com" },
]
dependencies = [
    "streamlit>=1.46.1",
    "opencv-python-headless>=4.12.0.88",
    "numpy>=2.2.4",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.0",
    "pixelart-modules>=0.1.0",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.12.2",
    "opencv-python>=4.11.0.86",
    "watchdog>=6.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pixelart"]

[tool.pyright]
venvPath = "."
venv = ".venv"
